--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="styles/g3.css" />
   </head>
   <body>
-    <header></header>
+    <header>
+      <nav class="navbar">
+        <h3 class="brand">G3 Architects</h3>
+      </nav>
+    </header>
 
     <main></main>
 
