--- a/index.html
+++ b/index.html
@@ -6,10 +6,24 @@
     <title>G3 Architects</title>
     <link rel="stylesheet" href="styles/g3.css" />
   </head>
-  <body>
-    <header>
-      <nav class="navbar">
+  <body class="work-sens-font">
+    <header class="bg-light">
+      <nav class="navbar display-flex">
         <h3 class="brand">G3 Architects</h3>
+        <ul class="nav-links display-flex">
+          <li class="nav-item">
+            <a href="" class="nav-link text-gra">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link text-gra">About</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link text-gay"> Contact Us </a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link text-gra">Login</a>
+          </li>
+        </ul>
       </nav>
     </header>
 
