--- a/index.html
+++ b/index.html
@@ -25,6 +25,23 @@
           </li>
         </ul>
       </nav>
+      <div class="banner">
+        <div class="banner-content">
+          <h1 class="banner-title">Brand New Group of Architects</h1>
+          <p class="banner-disvription">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in <br />
+            some form, by injected humour, or randomised words which don't look
+            even
+          </p>
+
+          <div class="btn-center">
+            <button class="btn-primary">Explore More</button>
+          </div>
+        </div>
+
+        <img class="banner-img" src="images/banner.png" alt="" />
+      </div>
     </header>
 
     <main></main>
