--- a/index.html
+++ b/index.html
@@ -40,11 +40,26 @@
           </div>
         </div>
 
-        <img class="banner-img" src="images/banner.png" alt="" />
+       
+       <img class="banner-img" src="images/banner.png" alt="" />
       </div>
     </header>
 
-    <main></main>
+<main>
+<section class="teams display-flex ">
+<div class="team-img-container">
+<img src="images/team1.png" alt=" two architect discussing about design">
+<img src="images/team2.png" alt="">
+<img src="images/team3.png" alt="">
+<img src="images/team4.png" alt="">
+  </div>
+   <div class="our-features">
+<h3 class="features-title"> <span id="quick-list" class="text-light-gra">Quick List</span> <span>of Our</span> <span>Features</span></h3>
+<p class="features-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+<button class="btn-primary">Explor More</button>
+  </div>
+      </section>
+    </main>
 
     <footer></footer>
   </body>
