--- a/index.html
+++ b/index.html
@@ -40,24 +40,62 @@
           </div>
         </div>
 
-       
-       <img class="banner-img" src="images/banner.png" alt="" />
+        <img class="banner-img" src="images/banner.png" alt="" />
       </div>
     </header>
 
-<main>
-<section class="teams display-flex ">
-<div class="team-img-container">
-<img src="images/team1.png" alt=" two architect discussing about design">
-<img src="images/team2.png" alt="">
-<img src="images/team3.png" alt="">
-<img src="images/team4.png" alt="">
-  </div>
-   <div class="our-features">
-<h3 class="features-title"> <span id="quick-list" class="text-light-gra">Quick List</span> <span>of Our</span> <span>Features</span></h3>
-<p class="features-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-<button class="btn-primary">Explor More</button>
-  </div>
+    <main>
+      <section class="teams display-flex">
+        <div class="team-img-container">
+          <img
+            src="images/team1.png"
+            alt=" two architect discussing about design"
+          />
+          <img src="images/team2.png" alt="" />
+          <img src="images/team3.png" alt="" />
+          <img src="images/team4.png" alt="" />
+        </div>
+        <div class="our-features">
+          <h3 class="section-title">
+            <span id="quick-list" class="text-light-gra">Quick List</span>
+            <span>of Our</span> <span class="text-primary">Features</span>
+          </h3>
+          <p class="features-description text-light-gra">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even
+          </p>
+          <button class="btn-primary">Explor More</button>
+        </div>
+      </section>
+      <section>
+        <h3 class="section-title">Some Facts</h3>
+        <p class="text-light-gra">
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration.
+        </p>
+        <div class="facts-container">
+          <div class="fact">
+            <img src="" alt="" class="fact-icon" />
+            <h4 class="fact-number"></h4>
+            <h5 class="fact-name"></h5>
+          </div>
+          <div class="fact">
+            <img src="" alt="" class="fact-icon" />
+            <h4 class="fact-number"></h4>
+            <h5 class="fact-name"></h5>
+          </div>
+          <div class="fact">
+            <img src="" alt="" class="fact-icon" />
+            <h4 class="fact-number"></h4>
+            <h5 class="fact-name"></h5>
+          </div>
+          <div class="fact">
+            <img src="" alt="" class="fact-icon" />
+            <h4 class="fact-number"></h4>
+            <h5 class="fact-name"></h5>
+          </div>
+        </div>
       </section>
     </main>
 
