--- a/index.html
+++ b/index.html
@@ -163,6 +163,6 @@
       </section>
     </main>
 
-    <footer></footer>
+    <footer class="footer">All rights reserved copyright@2023 startup landing page design</footer>
   </body>
 </html>
